--- a/app/assets/stylesheets/api/splash.scss
+++ b/app/assets/stylesheets/api/splash.scss
@@ -69,6 +69,7 @@ body {
     margin-top: 10px;
     line-height: 24px;
     vertical-align: baseline;
+    overflow: hidden;
 
 }
 .signup-btn2 {
@@ -87,6 +88,7 @@ body {
     margin-right: 15px;
     border-radius: 3px;
     margin-top: 10px;
+    overflow: hidden;
 }
 
 .signin-btn {
@@ -104,6 +106,7 @@ body {
     margin-top: 10px;
     font-size: 14px; 
     vertical-align: baseline;
+    overflow: hidden;
 }
 .signin-btn2 {
     background: 0 0;
@@ -119,7 +122,7 @@ body {
     border-radius: 3px;
     margin-top: 10px;
     font-size: 12px;
-    
+    overflow: hidden;
 }
 
 .splash-upload-btn {
@@ -140,7 +143,7 @@ body {
     margin-top: 6px;
     line-height: 24px;
     vertical-align: baseline;
-
+    overflow: hidden;
 }
 
 .banner{ 
